--- a/js/package.json
+++ b/js/package.json
@@ -5,7 +5,7 @@
   "main": "es_query.js",
   "dependencies": {
     "elasticsearch": "^11.0.1",
-    "line-by-line": "^0.1.5",
+    "line-by-line": "^0.1.5"
   },
   "devDependencies": {},
   "scripts": {
